Fixing flexbox wrapping on smaller screens

--- a/client/main.css
+++ b/client/main.css
@@ -41,6 +41,7 @@ body {
   border: 1px solid #DDA;
   flex-grow: 1;
   flex-basis: 0;
+  min-width: 500px;
 }
 
 #heater-status-container {
@@ -52,6 +53,7 @@ body {
   border: 1px solid #BDB;
   flex-grow: 1;
   flex-basis: 0;
+  min-width: 500px;
 }
 
 
